[gd_scene load_steps=3 format=3 uid="uid://ce7cy1mrfoy6u"]

[ext_resource type="PackedScene" uid="uid://crw2j6okiwk0v" path="res://Game/UI/Interfaces/InterfacePages/InterfacePage.tscn" id="1_c3y1a"]
[ext_resource type="Script" path="res://Game/UI/Interfaces/InterfacePages/SystemInterfacePage.gd" id="2_plvrm"]

[node name="System" instance=ExtResource("1_c3y1a")]
script = ExtResource("2_plvrm")

[node name="Label" parent="Title" index="0"]
text = "SYSTEM"

[node name="VSeparator" type="VSeparator" parent="." index="1"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 40.0
offset_right = 404.0
offset_bottom = -40.0
grow_vertical = 2

[node name="Buttons" type="MarginContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 400.0
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons" index="0"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Controls" type="Button" parent="Buttons/VBoxContainer" index="0"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Control Settings"

[node name="Visual Settings" type="Button" parent="Buttons/VBoxContainer" index="1"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Visual Settings"

[node name="Audio Settings" type="Button" parent="Buttons/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Audio Settings"

[node name="Save" type="Button" parent="Buttons/VBoxContainer" index="3"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_vertical = 4
text = "Save Game"

[node name="MainMenu" type="Button" parent="Buttons/VBoxContainer" index="4"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_vertical = 4
text = "Exit to Main Menu"

[node name="Quit" type="Button" parent="Buttons/VBoxContainer" index="5"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_vertical = 4
text = "Exit to Desktop"

[node name="Content" type="MarginContainer" parent="." index="3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Save" type="CenterContainer" parent="Content" index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Save" index="0"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
alignment = 1

[node name="Current" type="Button" parent="Content/Save/VBoxContainer" index="0"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
text = "Save to Current Slot
(recommended)"

[node name="CurrentSuccess" type="Label" parent="Content/Save/VBoxContainer" index="1"]
visible = false
layout_mode = 2
text = "Enter a new save slot name!"

[node name="Spacer" type="Control" parent="Content/Save/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="New" type="Button" parent="Content/Save/VBoxContainer" index="3"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
text = "Save to New Slot"

[node name="LineEdit" type="LineEdit" parent="Content/Save/VBoxContainer/New" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -28.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "new_slot_name"
clear_button_enabled = true

[node name="NewSlotError" type="Label" parent="Content/Save/VBoxContainer" index="4"]
visible = false
layout_mode = 2
text = "Enter a new save slot name!"

[node name="MainMenu" type="CenterContainer" parent="Content" index="1"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/MainMenu" index="0"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="Content/MainMenu/VBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "EXIT TO MAIN MENU"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Content/MainMenu/VBoxContainer" index="1"]
layout_mode = 2
text = "Are you sure? Your game will not be saved."
horizontal_alignment = 1

[node name="Button" type="Button" parent="Content/MainMenu/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Yes, Exit to Main Menu"

[node name="Quit" type="CenterContainer" parent="Content" index="2"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Quit" index="0"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="Content/Quit/VBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "EXIT TO DESKTOP"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Content/Quit/VBoxContainer" index="1"]
layout_mode = 2
text = "Are you sure? Your game will not be saved."
horizontal_alignment = 1

[node name="Button" type="Button" parent="Content/Quit/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Yes, Exit to Desktop"

[connection signal="pressed" from="Buttons/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Content/Save/VBoxContainer/Current" to="." method="_on_save_current_pressed"]
[connection signal="pressed" from="Content/MainMenu/VBoxContainer/Button" to="." method="_on_mm_confirm_pressed"]
[connection signal="pressed" from="Content/Quit/VBoxContainer/Button" to="." method="_on_quit_confirm_pressed"]
